--- a/style.css
+++ b/style.css
@@ -102,7 +102,12 @@ button{
     border: rgba(44, 44, 44, 0.308) 1px solid;
     outline: none;
     color: white;
-    font-weight: 500;
+  
+}
+button a{
+   color: white;
+   text-decoration: none;
+   font-weight: 500;
 }
 @media screen and (min-width:320px) {
     .wrapper {
